falcon-api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    autopilot.gke.io/resource-adjustment: '{"input":{"containers":[{"name":"falcon-api"}]},"output":{"containers":[{"limits":{"ephemeral-storage":"1Gi"},"requests":{"cpu":"500m","ephemeral-storage":"1Gi","memory":"2Gi"},"name":"falcon-api"}]},"computeClassAtAdmission":"Default","modified":true}'
    autopilot.gke.io/warden-version: 33.33.20-gke.0
    deployment.kubernetes.io/revision: "103"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"falcon-api"},"name":"falcon-api","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"falcon-api"}},"template":{"metadata":{"labels":{"app":"falcon-api"}},"spec":{"containers":[{"image":"us-central1-docker.pkg.dev/falconmanagerpro/falcon-manager/falcon-api:v1","imagePullPolicy":"Always","livenessProbe":{"failureThreshold":3,"httpGet":{"path":"/api/health","port":5003},"initial [...]
  creationTimestamp: "2025-11-08T02:30:27Z"
  generation: 105
  labels:
    app: falcon-api
  name: falcon-api
  namespace: default
  resourceVersion: "1765708426877407005"
  uid: d3c65b8a-44bf-4572-80e7-9ff6631e85c8
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: falcon-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-11-14T05:15:25Z"
      labels:
        app: falcon-api
    spec:
      containers:
      - env:
        - name: DB_ENABLED
          value: "true"
        - name: DB_NAME
          valueFrom:
            secretKeyRef:
              key: DB_NAME
              name: falcon-db-secret
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: DB_PASSWORD
              name: falcon-db-secret
        - name: DB_PORT
          valueFrom:
            secretKeyRef:
              key: DB_PORT
              name: falcon-db-secret
        - name: DB_USER
          valueFrom:
            secretKeyRef:
              key: DB_USER
              name: falcon-db-secret
        - name: DB_HOST
          valueFrom:
            secretKeyRef:
              key: DB_HOST
              name: falcon-db-secret
        image: us-central1-docker.pkg.dev/falconmanagerpro/falcon-manager/falcon-api:v89
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/health
            port: 5003
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 3
        name: falcon-api
        ports:
        - containerPort: 5003
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/health
            port: 5003
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        resources:
          limits:
            ephemeral-storage: 1Gi
          requests:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
        securityContext:
          capabilities:
            drop:
            - NET_RAW
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: kubernetes.io/arch
        operator: Equal
        value: amd64
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-12-12T07:03:30Z"
    lastUpdateTime: "2025-12-12T07:05:33Z"
    message: ReplicaSet "falcon-api-8d794ddf" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-12-14T10:33:46Z"
    lastUpdateTime: "2025-12-14T10:33:46Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 105
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
